# gemini-mcp-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  TOOLS.md
examples/: claude-agent.md
skills/: architecture-mapper.md  bug-hunter.md  code-reviewer.md  dependency-auditor.md  docs-writer.md  final-reviewer.md  implementation-planner.md  refactorer.md  security-auditor.md  test-writer.md
src/gemini_agent_mcp/: __init__.py  __main__.py  agent_loop.py  config.py  cost.py  main.py  permissions.py  project_detect.py  safety.py  server.py  session.py  skill_loader.py  tools.py
tests/: conftest.py  test_permissions.py  test_safety.py  test_server.py  test_skill_loader.py  test_tools.py
