[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-agent-mcp"
version = "0.1.0"
description = "MCP server that runs Gemini as an autonomous agent with function-calling tool loop"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "José Alberto", email = "jose.tizon@ng.cash" }]
keywords = ["mcp", "gemini", "claude-code", "subagent", "function-calling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["google-genai>=1.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/jatizon/gemini-mcp-agent"
Issues = "https://github.com/jatizon/gemini-mcp-agent/issues"

[tool.setuptools.packages.find]
where = ["src"]
